Changed scripts: split the projects into cli, frontend and server.

--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "Tasks ran by webhooks",
   "main": "index.js",
   "scripts": {
-    "dev": "npm-run-all --parallel backend:dev frontend:dev",
-    "dev:backend": "npm run -s backend:pack:watch",
-    "dev:frontend": "npm run -s frontend:pack:watch",
-    "backend:dev": "npm run -s backend:pack:watch",
-    "backend:pack": "webpack --config environment/backend.dev.webpack.js",
-    "backend:pack:watch": "npm run -s backend:pack -- --watch",
+    "dev": "npm-run-all --parallel cli:dev server:dev frontend:dev",
+    "dev:cli": "npm run -s cli:dev",
+    "dev:frontend": "npm run -s frontend:dev",
+    "dev:server": "npm run -s server:dev",
+    "cli:dev": "npm run -s cli:pack:watch",
+    "cli:pack": "webpack --config src/cli/dev.webpack.js",
+    "cli:pack:watch": "npm run -s cli:pack -- --watch",
     "frontend:dev": "npm run -s frontend:pack:watch",
-    "frontend:pack": "webpack --config environment/frontend.dev.webpack.js",
+    "frontend:pack": "webpack --config src/frontend/dev.webpack.js",
     "frontend:pack:watch": "npm run -s frontend:pack -- --watch",
-    "start": "npm-run-all start:frontend start:backend",
-    "start:backend": "npm run -s backend:pack && node src/backend/build/index.js",
-    "start:frontend": "npm run -s frontend:pack"
+    "server:dev": "npm run -s server:pack:watch",
+    "server:pack": "webpack --config src/server/dev.webpack.js",
+    "server:pack:watch": "npm run -s server:pack -- --watch",
+    "start": "npm-run-all start:frontend start:server",
+    "start:cli": "npm run -s cli:pack",
+    "start:frontend": "npm run -s frontend:pack",
+    "start:server": "npm run -s server:pack && node src/server/build/index.js"
   },
   "repository": {
     "type": "git",
