--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "dev:cli": "npm run -s cli:dev",
     "dev:frontend": "npm run -s frontend:dev",
     "dev:server": "npm run -s server:dev",
-    "cli:dev": "npm run -s cli:pack:watch",
-    "cli:pack": "webpack --config src/cli/dev.webpack.js",
-    "cli:pack:watch": "npm run -s cli:pack -- --watch",
-    "frontend:dev": "npm run -s frontend:pack:watch",
-    "frontend:pack": "webpack --config src/frontend/dev.webpack.js",
-    "frontend:pack:watch": "npm run -s frontend:pack -- --watch",
-    "server:dev": "npm run -s server:pack:watch",
-    "server:pack": "webpack --config src/server/dev.webpack.js",
-    "server:pack:watch": "npm run -s server:pack -- --watch",
+    "cli:dev": "npm run -s cli:compile:watch",
+    "cli:compile": "webpack --config src/cli/dev.webpack.js",
+    "cli:compile:watch": "npm run -s cli:compile -- --watch",
+    "frontend:dev": "npm run -s frontend:compile:watch",
+    "frontend:compile": "webpack --config src/frontend/dev.webpack.js",
+    "frontend:compile:watch": "npm run -s frontend:compile -- --watch",
+    "server:dev": "npm run -s server:compile:watch",
+    "server:compile": "webpack --config src/server/dev.webpack.js",
+    "server:compile:watch": "npm run -s server:compile -- --watch",
     "start": "npm-run-all start:frontend start:server",
-    "start:cli": "npm run -s cli:pack",
-    "start:frontend": "npm run -s frontend:pack",
-    "start:server": "npm run -s server:pack && node src/server/build/index.js"
+    "start:cli": "npm run -s cli:compile",
+    "start:frontend": "npm run -s frontend:compile",
+    "start:server": "npm run -s server:compile && node src/server/build/index.js"
   },
+  "bin": "bin/chook",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wufe/captainhook.git"
@@ -38,6 +39,8 @@
   "devDependencies": {
     "file-loader": "^0.9.0",
     "npm-run-all": "^3.1.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.9.0",
