Added core code (chook)

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "Tasks ran by webhooks",
   "main": "index.js",
   "scripts": {
-    "dev": "npm-run-all --parallel cli:dev server:dev frontend:dev",
+    "dev": "npm-run-all --parallel chook:dev cli:dev server:dev frontend:dev",
+    "dev:chook": "npm run -s chook:dev",
     "dev:cli": "npm run -s cli:dev",
     "dev:frontend": "npm run -s frontend:dev",
     "dev:server": "npm run -s server:dev",
+    "chook:dev": "npm run -s chook:compile:watch",
+    "chook:compile": "webpack --config src/chook/dev.webpack.js",
+    "chook:compile:watch": "npm run -s chook:compile -- --watch",
     "cli:dev": "npm run -s cli:compile:watch",
     "cli:compile": "webpack --config src/cli/dev.webpack.js",
     "cli:compile:watch": "npm run -s cli:compile -- --watch",
@@ -17,7 +21,8 @@
     "server:dev": "npm run -s server:compile:watch",
     "server:compile": "webpack --config src/server/dev.webpack.js",
     "server:compile:watch": "npm run -s server:compile -- --watch",
-    "start": "npm-run-all start:frontend start:server",
+    "start": "npm-run-all start:chook start:cli start:frontend start:server",
+    "start:chook": "npm run -s chook:compile",
     "start:cli": "npm run -s cli:compile",
     "start:frontend": "npm run -s frontend:compile",
     "start:server": "npm run -s server:compile && node src/server/build/index.js"
