--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core:compile:watch": "npm run -s core:compile -- --watch",
     "frontend:dev": "npm run -s frontend:compile:watch",
     "frontend:compile": "webpack --config src/frontend/dev.webpack.js",
-    "frontend:compile:watch": "npm run -s frontend:compile -- --watch"
+    "frontend:compile:watch": "npm run -s frontend:compile -- --watch",
+    "test": "mocha tests"
   },
   "bin": "dist/bin/chook",
   "repository": {
@@ -30,7 +31,9 @@
     "express": "^4.14.0"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "file-loader": "^0.9.0",
+    "mocha": "^3.1.1",
     "npm-run-all": "^3.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
