--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "npm-run-all": "^3.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "should": "^11.1.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.9.0",
