--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "devDependencies": {
     "assert": "^1.4.1",
     "file-loader": "^0.9.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.1.1",
+    "mocha-istanbul": "^0.3.0",
     "npm-run-all": "^3.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
