--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "assert": "^1.4.1",
     "file-loader": "^0.9.0",
     "istanbul": "^0.4.5",
+    "json-loader": "^0.5.4",
     "mocha": "^3.1.1",
     "mocha-istanbul": "^0.3.0",
     "npm-run-all": "^3.1.0",
