--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "assert": "^1.4.1",
+    "chai": "^3.5.0",
     "file-loader": "^0.9.0",
     "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
