--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "json-loader": "^0.5.4",
     "mocha": "^3.1.1",
     "mocha-istanbul": "^0.3.0",
+    "mocha-junit-reporter": "^1.12.0",
     "npm-run-all": "^3.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
