--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "contributors": [],
   "homepage": "https://github.com/wufe/captainhook#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "js-yaml": "^3.6.1"
   },
   "devDependencies": {
     "assert": "^1.4.1",
