--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "assert": "^1.4.1",
     "chai": "^3.5.0",
     "file-loader": "^0.9.0",
+    "handlebars": "^4.0.5",
     "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
     "mocha": "^3.1.1",
