--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "assert": "^1.4.1",
     "chai": "^3.5.0",
+    "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "handlebars": "^4.0.5",
     "istanbul": "^0.4.5",
@@ -41,9 +42,11 @@
     "mocha": "^3.1.1",
     "mocha-istanbul": "^0.3.0",
     "mocha-junit-reporter": "^1.12.0",
+    "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "sass-loader": "^4.0.2",
     "should": "^11.1.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
