--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "yargs": "^6.0.0"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
     "assert": "^1.4.1",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
