--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-node-externals": "^1.5.4"
   }
 }
