--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ npm-debug.log
 # OS
 .DS_Store
 
+# Database model defitions
+/migrations/models.js
+
 # Build artifacts
 /build/lib
 /build/resources/database.sqlite
