--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,16 @@ npm-debug.log
 
 # Build artifacts
 /build/lib
+/build/resources/assets
+/build/resources/config.yml
 /build/resources/database.sqlite
 /build/resources/database.test.sqlite
-/build/resources/assets
 
 # Dist artifacts
 /dist/lib
-/dist/resources/database.sqlite
 /dist/resources/assets
+/build/resources/config.yml
+/dist/resources/database.sqlite
 
 # Typescript
 /typings
