--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^0.8.7",
     "express": "^4.14.0",
     "js-yaml": "^3.6.1",
+    "jsonwebtoken": "^7.1.9",
     "sequelize": "^3.24.6",
     "sqlite3": "^3.1.8",
     "yargs": "^6.0.0"
