Added body parser for express

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/wufe/captainhook#readme",
   "dependencies": {
     "bcrypt": "^0.8.7",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "js-yaml": "^3.6.1",
     "jsonwebtoken": "^7.1.9",
