--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "frontend:dev": "npm run -s frontend:compile:watch",
     "frontend:compile": "webpack --config src/frontend/dev.webpack.js",
     "frontend:compile:watch": "npm run -s frontend:compile -- --watch",
-    "prepublish": "npm-run-all compile sequelize db:migrate",
+    "migrate": "sequelize db:migrate",
+    "prepublish": "npm-run-all compile migrate",
     "test": "NODE_ENV=mocha mocha"
   },
   "bin": "build/bin/chook",
