--- a/circle.yml
+++ b/circle.yml
@@ -19,5 +19,5 @@ test:
   override:
     - mocha test --recursive --reporter mocha-junit-reporter:
         environment:
-          NODE_ENV: mocha
+          NODE_ENV: circleci
           MOCHA_FILE: $CIRCLE_TEST_REPORTS/junit/test-results.xml
