Returning to npm: yarn is not capable of compiling node-sass

--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,7 @@ dependencies:
   pre:
     - pwd
   override:
-    - npm install -g yarn
-    - yarn
+    - npm install -s
     
 test:
   override:
