--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typings-install": "typings install",
     "migrate": "sequelize db:migrate",
     "prepublish": "npm-run-all typings-install compile migrate",
-    "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test",
+    "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && sequelize db:seed:all --env test",
     "test": "NODE_ENV=mocha mocha"
   },
   "bin": "build/bin/chook",
