--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "frontend:compile": "webpack --config src/frontend/dev.webpack.js",
     "frontend:compile:watch": "npm run -s frontend:compile -- --watch",
     "typings-install": "typings install",
-    "migrate": "sequelize db:migrate",
-    "prepublish": "npm-run-all typings-install compile migrate",
-    "pretest": "sequelize db:migrate:undo:all --env test && sequelize db:migrate --env test && sequelize db:seed:all --env test",
+    "prepublish": "npm-run-all typings-install compile sequelize:migrate:refresh",
+    "pretest": "npm-run-all sequelize:test:migrate:refresh sequelize:test:seed:all",
+    "sequelize:migrate": "sequelize db:migrate",
+    "sequelize:migrate:refresh": "npm-run-all sequelize:migrate:undo:all sequelize:migrate",
+    "sequelize:migrate:undo:all": "sequelize db:migrate:undo:all",
+    "sequelize:seed:all": "sequelize db:seed:all",
+    "sequelize:test:migrate": "npm run -s sequelize:migrate -- --env test",
+    "sequelize:test:migrate:refresh": "npm-run-all sequelize:test:migrate:undo:all sequelize:test:migrate",
+    "sequelize:test:migrate:undo:all": "npm run -s sequelize:migrate:undo:all -- --env test",
+    "sequelize:test:seed:all": "npm run -s sequelize:seed:all -- --env test",
     "test": "NODE_ENV=mocha mocha"
   },
   "bin": "build/bin/chook",
