--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nyc": "^8.3.2",
     "sequelize": "^3.24.6",
     "sqlite3": "^3.1.8",
+    "winston": "^2.3.0",
     "yargs": "^6.0.0"
   },
   "devDependencies": {
