--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.14.0",
     "js-yaml": "^3.6.1",
     "jsonwebtoken": "^7.1.9",
+    "moment": "^2.15.2",
     "nyc": "^8.3.2",
     "sequelize": "^3.24.6",
     "sqlite3": "^3.1.8",
