--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "argparse": "^1.0.9",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
     "express": "^4.14.0",
     "js-yaml": "^3.6.1",
     "jsonwebtoken": "^7.1.9",
