--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "typings": "^1.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
+    "webpack-bundle-analyzer": "^1.4.2",
     "webpack-node-externals": "^1.5.4"
   },
   "nyc": {
