Added handler for server status cli command.
The process will work with a post entrypoint that requires a json body
with a token variable, representing the security.token string in
config.yml.
The post request, if successfull, will return the pid of the process
of the server.

The status command will thus send a request to the /ping entrypoint:
if a response is received, the server is online;
it is offline otherwise.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.2",
     "nyc": "^8.3.2",
+    "request": "^2.78.0",
     "sequelize": "^3.24.6",
     "sqlite3": "^3.1.8",
     "winston": "^2.3.0",
