--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.2",
     "nyc": "^8.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "request": "^2.78.0",
     "sequelize": "^3.24.6",
     "sqlite3": "^3.1.8",
@@ -59,7 +60,9 @@
     "yargs": "^6.0.0"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "bundle-loader": "^0.5.4",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
@@ -74,6 +77,7 @@
     "npm-run-all": "^3.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
@@ -88,7 +92,7 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^0.9.0",
     "ts-node": "^1.6.1",
-    "typescript": "^2.0.3",
+    "typescript": "^2.0.10",
     "typings": "^1.4.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
