--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,14 +1,17 @@
 {
     "compilerOptions": {
-        "outDir": "./build/resources/assets/javascript/",
+        "outDir": "../../build/resources/assets/javascript/",
         "sourceMap": true,
         "noImplicitAny": true,
         "module": "commonjs",
-        "target": "es5",
-        "jsx": "react"
+        "target": "es6",
+        "jsx": "react",
+        "removeComments": true
     },
     "files": [
-        "../../typings/index.d.ts",
         "./index.tsx"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
