Introduced redux-saga.
Using redux-saga to manage side effects and use asynchronous calls in a
synchronous style.

It has been injected as a middleware in the StoreProvider.
It takes a rootSaga to start listening for changes from.

For more info checkout the gist
https://gist.github.com/Wufe/a1cd35d2c8fd9997d4ec69895eea696a.

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,15 +1,17 @@
 {
     "compilerOptions": {
-        "outDir": "../../build/resources/assets/javascript/",
         "sourceMap": true,
         "noImplicitAny": true,
         "module": "commonjs",
-        "target": "es6",
+        "target": "es2015",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
         "jsx": "react",
         "removeComments": true
     },
     "files": [
-        "./index.tsx"
+        "./index.tsx",
+        "../../typings/index.d.ts"
     ],
     "exclude": [
         "node_modules"
