--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/wufe/captainhook#readme",
   "dependencies": {
     "argparse": "^1.0.9",
+    "babel": "^6.5.2",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
@@ -50,7 +51,6 @@
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.2",
     "nyc": "^8.3.2",
-    "react-hot-loader": "^3.0.0-beta.6",
     "request": "^2.78.0",
     "sequelize": "^3.24.6",
     "sqlite3": "^3.1.8",
@@ -62,7 +62,9 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bundle-loader": "^0.5.4",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
@@ -84,6 +86,7 @@
     "redux": "^3.6.0",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-logger": "^2.7.4",
+    "redux-saga": "^0.13.0",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.0.2",
     "sequelize-cli": "^2.4.0",
