--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "node-sass": "^3.10.1",
     "npm-run-all": "^3.1.0",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.4.0",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.5",
