Updated package.json with comprehensive production commands and Readme.

--- a/package.json
+++ b/package.json
@@ -5,23 +5,32 @@
   "main": "build/lib/chook.js",
   "scripts": {
     "compile": "npm-run-all core:compile frontend:compile",
+    "compile:prod": "npm-run-all core:compile:prod frontend:compile:prod",
     "cover": "NODE_ENV=mocha nyc npm t -s && open coverage/index.html",
     "dev": "npm-run-all --parallel core:dev frontend:dev",
+    "development": "npm-run-all compile sequelize:migrate:refresh",
     "dev:core": "npm run -s core:dev",
     "dev:frontend": "npm run -s frontend:dev",
     "core:dev": "npm run -s core:compile:watch",
     "core:compile": "webpack --config src/core/dev.webpack.js",
+    "core:compile:prod": "webpack --config src/core/prod.webpack.js",
     "core:compile:watch": "npm run -s core:compile -- --watch",
     "frontend:dev": "npm run -s frontend:compile:watch",
     "frontend:compile": "webpack --config src/frontend/dev.webpack.js",
+    "frontend:compile:prod": "webpack --config src/frontend/prod.webpack.js",
     "frontend:compile:watch": "npm run -s frontend:compile -- --watch",
     "typings-install": "typings install",
-    "prepublish": "npm-run-all typings-install compile sequelize:migrate:refresh",
+    "prepublish": "npm-run-all typings-install development production",
     "pretest": "npm-run-all sequelize:test:migrate:refresh sequelize:test:seed:all",
+    "production": "npm-run-all compile:prod sequelize:prod:migrate:refresh",
     "sequelize:migrate": "sequelize db:migrate",
     "sequelize:migrate:refresh": "npm-run-all sequelize:migrate:undo:all sequelize:migrate",
     "sequelize:migrate:undo:all": "sequelize db:migrate:undo:all",
     "sequelize:seed:all": "sequelize db:seed:all",
+    "sequelize:prod:migrate": "npm run -s sequelize:migrate -- --env production",
+    "sequelize:prod:migrate:refresh": "npm-run-all sequelize:prod:migrate:undo:all sequelize:prod:migrate",
+    "sequelize:prod:migrate:undo:all": "npm run -s sequelize:migrate:undo:all -- --env production",
+    "sequelize:prod:seed:all": "npm run -s sequelize:seed:all -- --env production",
     "sequelize:test:migrate": "npm run -s sequelize:migrate -- --env test",
     "sequelize:test:migrate:refresh": "npm-run-all sequelize:test:migrate:undo:all sequelize:test:migrate",
     "sequelize:test:migrate:undo:all": "npm run -s sequelize:migrate:undo:all -- --env test",
