--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "faker": "^3.1.0",
     "js-yaml": "^3.6.1",
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.2",
