--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-bundle-analyzer": "^1.4.2",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-node-externals": "^1.5.4",
+    "yaml-loader": "^0.4.0"
   },
   "nyc": {
     "include": [
