--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "request": "^2.78.0",
     "sequelize": "^3.24.6",
     "sqlite3": "^3.1.8",
+    "uuid": "^3.0.1",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2",
     "winston": "^2.3.0",
