--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "fixed-data-table": "^0.6.3",
     "handlebars": "^4.0.5",
     "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
@@ -101,6 +102,7 @@
     "redux-logger": "^2.7.4",
     "redux-saga": "^0.13.0",
     "redux-thunk": "^2.1.0",
+    "responsive-fixed-data-table": "^2.0.0",
     "sass-loader": "^4.0.2",
     "sequelize-cli": "^2.4.0",
     "should": "^11.1.1",
