--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "faker": "^3.1.0",
     "js-yaml": "^3.6.1",
@@ -71,6 +72,7 @@
     "yargs": "^6.0.0"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-polyfill": "^6.16.0",
@@ -102,6 +104,7 @@
     "redux-logger": "^2.7.4",
     "redux-saga": "^0.13.0",
     "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4",
     "responsive-fixed-data-table": "^2.0.0",
     "sass-loader": "^4.0.2",
     "sequelize-cli": "^2.4.0",
@@ -110,8 +113,8 @@
     "style-loader": "^0.13.1",
     "ts-loader": "^0.9.0",
     "ts-node": "^1.6.1",
-    "typescript": "^2.0.10",
-    "typings": "^1.4.0",
+    "typescript": "^2.1.4",
+    "typings": "^2.1.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-bundle-analyzer": "^1.4.2",
