--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "handlebars": "^4.0.5",
     "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
+    "mobile-detect": "^1.3.5",
     "mocha": "^3.1.1",
     "mocha-istanbul": "^0.3.0",
     "mocha-junit-reporter": "^1.12.0",
