--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
     "express": "^4.14.0",
     "faker": "^3.1.0",
     "js-yaml": "^3.6.1",
@@ -83,6 +84,7 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "fixed-data-table": "^0.6.3",
+    "griddle-react": "^0.7.1",
     "handlebars": "^4.0.5",
     "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
