Updated directory resolution within the environment class

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile:prod": "npm-run-all core:compile:prod frontend:compile:prod",
     "cover": "NODE_ENV=mocha nyc npm t -s && open coverage/index.html",
     "dev": "npm-run-all --parallel core:dev frontend:dev",
-    "development": "npm-run-all compile sequelize:migrate:refresh",
+    "development": "npm-run-all compile sequelize:migrate:refresh sequelize:seed:all",
     "dev:core": "npm run -s core:dev",
     "dev:frontend": "npm run -s frontend:dev",
     "core:dev": "npm run -s core:compile:watch",
@@ -22,7 +22,7 @@
     "typings-install": "typings install",
     "install": "npm-run-all typings-install development production",
     "pretest": "npm-run-all sequelize:test:migrate:refresh sequelize:test:seed:all",
-    "production": "npm-run-all compile:prod sequelize:prod:migrate:refresh",
+    "production": "npm-run-all compile:prod sequelize:prod:migrate:refresh sequeelize:prod:seed:all",
     "sequelize:migrate": "sequelize db:migrate",
     "sequelize:migrate:refresh": "npm-run-all sequelize:migrate:undo:all sequelize:migrate",
     "sequelize:migrate:undo:all": "sequelize db:migrate:undo:all",
