--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "frontend:compile:prod": "webpack --config src/frontend/prod.webpack.js",
     "frontend:compile:watch": "npm run -s frontend:compile -- --watch",
     "typings-install": "typings install",
-    "install": "npm-run-all typings-install development production",
+    "prepublish": "npm-run-all typings-install development production",
     "pretest": "npm-run-all sequelize:test:migrate:refresh sequelize:test:seed:all",
-    "production": "npm-run-all compile:prod sequelize:prod:migrate:refresh sequeelize:prod:seed:all",
+    "production": "npm-run-all compile:prod sequelize:prod:migrate:refresh sequelize:prod:seed:all",
     "sequelize:migrate": "sequelize db:migrate",
     "sequelize:migrate:refresh": "npm-run-all sequelize:migrate:undo:all sequelize:migrate",
     "sequelize:migrate:undo:all": "sequelize db:migrate:undo:all",
